--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -8,6 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#0F0F0F" media=
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
